--- a/results/results_2D_point.ipynb
+++ b/results/results_2D_point.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "4a77d2a6",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "446ab868",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "f90189b8",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "3bd6065a",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
     "    df = df[df['nD'] != '3D']\n",
     "\n",
     "    # Only keep relevant columns\n",
-    "    relevant_columns = ['map_id', 'n_robots', 'method', 'operation_time', 'total_length']\n",
+    "    relevant_columns = ['map_id', 'n_robots', 'method', 'success', 'operation_time', 'total_length', 'max_steps']\n",
     "    df = df[relevant_columns]\n",
     "\n",
     "    return df"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "c334a45c",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "46f3b861",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "f6b4d3bd",
    "metadata": {},
    "outputs": [
@@ -151,8 +151,10 @@
        "      <th>map_id</th>\n",
        "      <th>n_robots</th>\n",
        "      <th>method</th>\n",
+       "      <th>success</th>\n",
        "      <th>operation_time</th>\n",
        "      <th>total_length</th>\n",
+       "      <th>max_steps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -161,55 +163,65 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
-       "      <td>2.82</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.18</td>\n",
        "      <td>16.23</td>\n",
+       "      <td>977</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>13</td>\n",
        "      <td>1</td>\n",
-       "      <td>4.09</td>\n",
-       "      <td>16.73</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4.21</td>\n",
+       "      <td>62.50</td>\n",
+       "      <td>1801</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>5.39</td>\n",
-       "      <td>35.74</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>16.69</td>\n",
+       "      <td>1390</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>27.13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.98</td>\n",
+       "      <td>33.62</td>\n",
+       "      <td>1382</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
+       "      <td>5</td>\n",
        "      <td>2</td>\n",
-       "      <td>3.76</td>\n",
-       "      <td>33.36</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.86</td>\n",
+       "      <td>27.13</td>\n",
+       "      <td>915</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   map_id  n_robots  method  operation_time  total_length\n",
-       "0       1         3       2            2.82         16.23\n",
-       "1       1         3       1            4.09         16.73\n",
-       "2       1         6       1            5.39         35.74\n",
-       "3       1         5       2            3.50         27.13\n",
-       "4       1         6       2            3.76         33.36"
+       "   map_id  n_robots  method  success  operation_time  total_length  max_steps\n",
+       "0       1         3       2     True            1.18         16.23        977\n",
+       "1       1        13       1     True            4.21         62.50       1801\n",
+       "2       1         3       1     True            1.45         16.69       1390\n",
+       "3       1         6       1     True            1.98         33.62       1382\n",
+       "4       1         5       2     True            1.86         27.13        915"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "5a65613b",
    "metadata": {},
    "outputs": [
@@ -231,23 +243,127 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_robots     3     4     5     6\n",
-      "method                          \n",
-      "1         4.09  4.02  4.57  5.39\n",
-      "2         2.82  2.73  3.50  3.76\n"
+      "\n",
+      "Performance Table for Map ID: 1\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>n_robots</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>method</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1384.0</td>\n",
+       "      <td>1390.0</td>\n",
+       "      <td>1394.0</td>\n",
+       "      <td>1390.0</td>\n",
+       "      <td>1382.0</td>\n",
+       "      <td>1457.0</td>\n",
+       "      <td>1473.0</td>\n",
+       "      <td>1645.0</td>\n",
+       "      <td>1889.0</td>\n",
+       "      <td>2056.0</td>\n",
+       "      <td>1499.0</td>\n",
+       "      <td>1801.0</td>\n",
+       "      <td>2039.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>821.0</td>\n",
+       "      <td>977.0</td>\n",
+       "      <td>844.0</td>\n",
+       "      <td>915.0</td>\n",
+       "      <td>889.0</td>\n",
+       "      <td>10938.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>1240.0</td>\n",
+       "      <td>2096.0</td>\n",
+       "      <td>47166.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "n_robots      2       3       4       5       6        7       8       9   \\\n",
+       "method                                                                      \n",
+       "1         1384.0  1390.0  1394.0  1390.0  1382.0   1457.0  1473.0  1645.0   \n",
+       "2          821.0   977.0   844.0   915.0   889.0  10938.0  1023.0  1240.0   \n",
+       "\n",
+       "n_robots      10       11      12      13      14  \n",
+       "method                                             \n",
+       "1         1889.0   2056.0  1499.0  1801.0  2039.0  \n",
+       "2         2096.0  47166.0     0.0     NaN     NaN  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "#\n",
     "tables = map_tables(df_all)\n",
-    "tables = create_performance_tables(tables, metric='operation_time')\n",
-    "print(tables[1])"
+    "tables = create_performance_tables(tables, metric='max_steps')\n",
+    "for map_id, table in tables.items():\n",
+    "    print(f\"\\nPerformance Table for Map ID: {map_id}\")\n",
+    "    display(table)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "4a39473a",
    "metadata": {},
    "outputs": [],
