--- a/results/results_3D.ipynb
+++ b/results/results_3D.ipynb
@@ -222,18 +222,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_robots      3      4\n",
-      "method                \n",
-      "1         75.83  80.75\n",
-      "2         44.14  47.25\n"
+      "\n",
+      "Performance Table for Map ID: 1\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>n_robots</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>method</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>75.83</td>\n",
+       "      <td>80.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>44.14</td>\n",
+       "      <td>47.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "n_robots      3      4\n",
+       "method                \n",
+       "1         75.83  80.75\n",
+       "2         44.14  47.25"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "#\n",
     "tables = map_tables(df_all)\n",
     "tables = create_performance_tables(tables, metric='operation_time')\n",
-    "print(tables[1])"
+    "for map_id, table in tables.items():\n",
+    "    print(f\"\\nPerformance Table for Map ID: {map_id}\")\n",
+    "    display(table)"
    ]
   },
   {
