--- a/results/results_2D_point.ipynb
+++ b/results/results_2D_point.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "4a77d2a6",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "446ab868",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "f90189b8",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "3bd6065a",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "c334a45c",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "46f3b861",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "f6b4d3bd",
    "metadata": {},
    "outputs": [
@@ -164,9 +164,9 @@
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>True</td>\n",
-       "      <td>1.18</td>\n",
-       "      <td>16.23</td>\n",
-       "      <td>977</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>16.38</td>\n",
+       "      <td>830</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -174,9 +174,9 @@
        "      <td>13</td>\n",
        "      <td>1</td>\n",
        "      <td>True</td>\n",
-       "      <td>4.21</td>\n",
-       "      <td>62.50</td>\n",
-       "      <td>1801</td>\n",
+       "      <td>2.41</td>\n",
+       "      <td>60.20</td>\n",
+       "      <td>1570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -184,9 +184,9 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>True</td>\n",
-       "      <td>1.45</td>\n",
-       "      <td>16.69</td>\n",
-       "      <td>1390</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>16.49</td>\n",
+       "      <td>1261</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -194,9 +194,9 @@
        "      <td>6</td>\n",
        "      <td>1</td>\n",
        "      <td>True</td>\n",
-       "      <td>1.98</td>\n",
+       "      <td>0.88</td>\n",
        "      <td>33.62</td>\n",
-       "      <td>1382</td>\n",
+       "      <td>1304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -204,9 +204,9 @@
        "      <td>5</td>\n",
        "      <td>2</td>\n",
        "      <td>True</td>\n",
-       "      <td>1.86</td>\n",
-       "      <td>27.13</td>\n",
-       "      <td>915</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>26.77</td>\n",
+       "      <td>885</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -214,14 +214,14 @@
       ],
       "text/plain": [
        "   map_id  n_robots  method  success  operation_time  total_length  max_steps\n",
-       "0       1         3       2     True            1.18         16.23        977\n",
-       "1       1        13       1     True            4.21         62.50       1801\n",
-       "2       1         3       1     True            1.45         16.69       1390\n",
-       "3       1         6       1     True            1.98         33.62       1382\n",
-       "4       1         5       2     True            1.86         27.13        915"
+       "0       1         3       2     True            0.33         16.38        830\n",
+       "1       1        13       1     True            2.41         60.20       1570\n",
+       "2       1         3       1     True            0.39         16.49       1261\n",
+       "3       1         6       1     True            0.88         33.62       1304\n",
+       "4       1         5       2     True            0.93         26.77        885"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "5a65613b",
    "metadata": {},
    "outputs": [
@@ -302,33 +302,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1384.0</td>\n",
-       "      <td>1390.0</td>\n",
-       "      <td>1394.0</td>\n",
-       "      <td>1390.0</td>\n",
-       "      <td>1382.0</td>\n",
-       "      <td>1457.0</td>\n",
-       "      <td>1473.0</td>\n",
-       "      <td>1645.0</td>\n",
-       "      <td>1889.0</td>\n",
-       "      <td>2056.0</td>\n",
-       "      <td>1499.0</td>\n",
-       "      <td>1801.0</td>\n",
-       "      <td>2039.0</td>\n",
+       "      <td>1256.0</td>\n",
+       "      <td>1261.0</td>\n",
+       "      <td>1291.0</td>\n",
+       "      <td>1302.0</td>\n",
+       "      <td>1304.0</td>\n",
+       "      <td>1363.0</td>\n",
+       "      <td>1395.0</td>\n",
+       "      <td>1407.0</td>\n",
+       "      <td>1515.0</td>\n",
+       "      <td>1490.0</td>\n",
+       "      <td>1921.0</td>\n",
+       "      <td>1570.0</td>\n",
+       "      <td>42973.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>821.0</td>\n",
-       "      <td>977.0</td>\n",
-       "      <td>844.0</td>\n",
-       "      <td>915.0</td>\n",
-       "      <td>889.0</td>\n",
-       "      <td>10938.0</td>\n",
-       "      <td>1023.0</td>\n",
-       "      <td>1240.0</td>\n",
-       "      <td>2096.0</td>\n",
-       "      <td>47166.0</td>\n",
+       "      <td>808.0</td>\n",
+       "      <td>830.0</td>\n",
+       "      <td>833.0</td>\n",
+       "      <td>885.0</td>\n",
+       "      <td>886.0</td>\n",
+       "      <td>47836.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -339,13 +339,13 @@
       "text/plain": [
        "n_robots      2       3       4       5       6        7       8       9   \\\n",
        "method                                                                      \n",
-       "1         1384.0  1390.0  1394.0  1390.0  1382.0   1457.0  1473.0  1645.0   \n",
-       "2          821.0   977.0   844.0   915.0   889.0  10938.0  1023.0  1240.0   \n",
+       "1         1256.0  1261.0  1291.0  1302.0  1304.0   1363.0  1395.0  1407.0   \n",
+       "2          808.0   830.0   833.0   885.0   886.0  47836.0     0.0     NaN   \n",
        "\n",
-       "n_robots      10       11      12      13      14  \n",
+       "n_robots      10      11      12      13       14  \n",
        "method                                             \n",
-       "1         1889.0   2056.0  1499.0  1801.0  2039.0  \n",
-       "2         2096.0  47166.0     0.0     NaN     NaN  "
+       "1         1515.0  1490.0  1921.0  1570.0  42973.0  \n",
+       "2            NaN     NaN     NaN     NaN      NaN  "
       ]
      },
      "metadata": {},
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "4a39473a",
    "metadata": {},
    "outputs": [],
