--- a/results/results_2D_point.ipynb
+++ b/results/results_2D_point.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "id": "4a77d2a6",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "id": "446ab868",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "id": "f90189b8",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "id": "3bd6065a",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "id": "c334a45c",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "id": "46f3b861",
    "metadata": {},
    "outputs": [],
@@ -123,119 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "id": "f6b4d3bd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>map_id</th>\n",
-       "      <th>n_robots</th>\n",
-       "      <th>method</th>\n",
-       "      <th>success</th>\n",
-       "      <th>operation_time</th>\n",
-       "      <th>total_length</th>\n",
-       "      <th>max_steps</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>16.38</td>\n",
-       "      <td>830</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2.41</td>\n",
-       "      <td>60.20</td>\n",
-       "      <td>1570</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>16.49</td>\n",
-       "      <td>1261</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>33.62</td>\n",
-       "      <td>1304</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.93</td>\n",
-       "      <td>26.77</td>\n",
-       "      <td>885</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   map_id  n_robots  method  success  operation_time  total_length  max_steps\n",
-       "0       1         3       2     True            0.33         16.38        830\n",
-       "1       1        13       1     True            2.41         60.20       1570\n",
-       "2       1         3       1     True            0.39         16.49       1261\n",
-       "3       1         6       1     True            0.88         33.62       1304\n",
-       "4       1         5       2     True            0.93         26.77        885"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load all results\n",
     "df_all = load_all_results('./static_tests')\n",
     "df_all = refine_dataframe(df_all)\n",
-    "df_all.head(5)"
+    "df_all.head(100)\n",
+    "\n",
+    "# if success is False, set operation_time and total_length and max_steps to NaN\n",
+    "df_all.loc[~df_all['success'], ['operation_time', 'total_length', 'max_steps']] = np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "id": "5a65613b",
    "metadata": {},
    "outputs": [
@@ -302,50 +206,50 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1256.0</td>\n",
-       "      <td>1261.0</td>\n",
-       "      <td>1291.0</td>\n",
-       "      <td>1302.0</td>\n",
-       "      <td>1304.0</td>\n",
-       "      <td>1363.0</td>\n",
-       "      <td>1395.0</td>\n",
-       "      <td>1407.0</td>\n",
-       "      <td>1515.0</td>\n",
-       "      <td>1490.0</td>\n",
-       "      <td>1921.0</td>\n",
-       "      <td>1570.0</td>\n",
-       "      <td>42973.0</td>\n",
+       "      <td>1423.0</td>\n",
+       "      <td>1426.0</td>\n",
+       "      <td>1429.0</td>\n",
+       "      <td>1438.0</td>\n",
+       "      <td>1427.0</td>\n",
+       "      <td>1504.0</td>\n",
+       "      <td>1553.0</td>\n",
+       "      <td>1671.0</td>\n",
+       "      <td>1533.0</td>\n",
+       "      <td>1689.0</td>\n",
+       "      <td>1728.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>808.0</td>\n",
-       "      <td>830.0</td>\n",
-       "      <td>833.0</td>\n",
-       "      <td>885.0</td>\n",
-       "      <td>886.0</td>\n",
-       "      <td>47836.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>829.0</td>\n",
+       "      <td>829.0</td>\n",
+       "      <td>829.0</td>\n",
+       "      <td>829.0</td>\n",
+       "      <td>829.0</td>\n",
+       "      <td>829.0</td>\n",
+       "      <td>829.0</td>\n",
+       "      <td>829.0</td>\n",
+       "      <td>829.0</td>\n",
+       "      <td>829.0</td>\n",
+       "      <td>950.0</td>\n",
+       "      <td>950.0</td>\n",
+       "      <td>950.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "n_robots      2       3       4       5       6        7       8       9   \\\n",
-       "method                                                                      \n",
-       "1         1256.0  1261.0  1291.0  1302.0  1304.0   1363.0  1395.0  1407.0   \n",
-       "2          808.0   830.0   833.0   885.0   886.0  47836.0     0.0     NaN   \n",
+       "n_robots      2       3       4       5       6       7       8       9   \\\n",
+       "method                                                                     \n",
+       "1         1423.0  1426.0  1429.0  1438.0  1427.0  1504.0  1553.0  1671.0   \n",
+       "2          829.0   829.0   829.0   829.0   829.0   829.0   829.0   829.0   \n",
        "\n",
-       "n_robots      10      11      12      13       14  \n",
-       "method                                             \n",
-       "1         1515.0  1490.0  1921.0  1570.0  42973.0  \n",
-       "2            NaN     NaN     NaN     NaN      NaN  "
+       "n_robots      10      11      12     13     14  \n",
+       "method                                          \n",
+       "1         1533.0  1689.0  1728.0    NaN    NaN  \n",
+       "2          829.0   829.0   950.0  950.0  950.0  "
       ]
      },
      "metadata": {},
@@ -363,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "id": "4a39473a",
    "metadata": {},
    "outputs": [],
