--- a/results/results_2D_point.ipynb
+++ b/results/results_2D_point.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 201,
    "id": "4a77d2a6",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 202,
    "id": "446ab868",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 203,
    "id": "f90189b8",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 204,
    "id": "3bd6065a",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 205,
    "id": "c334a45c",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 206,
    "id": "46f3b861",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 207,
    "id": "f6b4d3bd",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 208,
    "id": "5a65613b",
    "metadata": {},
    "outputs": [
@@ -206,35 +206,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1423.0</td>\n",
-       "      <td>1426.0</td>\n",
-       "      <td>1429.0</td>\n",
-       "      <td>1438.0</td>\n",
-       "      <td>1427.0</td>\n",
-       "      <td>1504.0</td>\n",
-       "      <td>1553.0</td>\n",
-       "      <td>1671.0</td>\n",
-       "      <td>1533.0</td>\n",
-       "      <td>1689.0</td>\n",
-       "      <td>1728.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1433.0</td>\n",
+       "      <td>1435.0</td>\n",
+       "      <td>1441.0</td>\n",
+       "      <td>1468.0</td>\n",
+       "      <td>1446.0</td>\n",
+       "      <td>1487.0</td>\n",
+       "      <td>1624.0</td>\n",
+       "      <td>1512.0</td>\n",
+       "      <td>2601.0</td>\n",
+       "      <td>1584.0</td>\n",
+       "      <td>1682.0</td>\n",
+       "      <td>1718.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>829.0</td>\n",
-       "      <td>829.0</td>\n",
-       "      <td>829.0</td>\n",
-       "      <td>829.0</td>\n",
-       "      <td>829.0</td>\n",
-       "      <td>829.0</td>\n",
-       "      <td>829.0</td>\n",
-       "      <td>829.0</td>\n",
-       "      <td>829.0</td>\n",
-       "      <td>829.0</td>\n",
-       "      <td>950.0</td>\n",
-       "      <td>950.0</td>\n",
-       "      <td>950.0</td>\n",
+       "      <td>835.0</td>\n",
+       "      <td>843.0</td>\n",
+       "      <td>877.0</td>\n",
+       "      <td>845.0</td>\n",
+       "      <td>947.0</td>\n",
+       "      <td>968.0</td>\n",
+       "      <td>927.0</td>\n",
+       "      <td>928.0</td>\n",
+       "      <td>991.0</td>\n",
+       "      <td>1288.0</td>\n",
+       "      <td>1684.0</td>\n",
+       "      <td>1108.0</td>\n",
+       "      <td>1280.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>835.0</td>\n",
+       "      <td>843.0</td>\n",
+       "      <td>877.0</td>\n",
+       "      <td>845.0</td>\n",
+       "      <td>947.0</td>\n",
+       "      <td>968.0</td>\n",
+       "      <td>927.0</td>\n",
+       "      <td>928.0</td>\n",
+       "      <td>991.0</td>\n",
+       "      <td>1288.0</td>\n",
+       "      <td>1684.0</td>\n",
+       "      <td>1108.0</td>\n",
+       "      <td>1280.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>835.0</td>\n",
+       "      <td>848.0</td>\n",
+       "      <td>1115.0</td>\n",
+       "      <td>993.0</td>\n",
+       "      <td>889.0</td>\n",
+       "      <td>1001.0</td>\n",
+       "      <td>1238.0</td>\n",
+       "      <td>1063.0</td>\n",
+       "      <td>1175.0</td>\n",
+       "      <td>1229.0</td>\n",
+       "      <td>1442.0</td>\n",
+       "      <td>1362.0</td>\n",
+       "      <td>1351.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>835.0</td>\n",
+       "      <td>877.0</td>\n",
+       "      <td>962.0</td>\n",
+       "      <td>1071.0</td>\n",
+       "      <td>1244.0</td>\n",
+       "      <td>1177.0</td>\n",
+       "      <td>1413.0</td>\n",
+       "      <td>987.0</td>\n",
+       "      <td>970.0</td>\n",
+       "      <td>1119.0</td>\n",
+       "      <td>1346.0</td>\n",
+       "      <td>1161.0</td>\n",
+       "      <td>1286.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -243,13 +291,19 @@
       "text/plain": [
        "n_robots      2       3       4       5       6       7       8       9   \\\n",
        "method                                                                     \n",
-       "1         1423.0  1426.0  1429.0  1438.0  1427.0  1504.0  1553.0  1671.0   \n",
-       "2          829.0   829.0   829.0   829.0   829.0   829.0   829.0   829.0   \n",
+       "1         1433.0  1435.0  1441.0  1468.0  1446.0  1487.0  1624.0  1512.0   \n",
+       "2          835.0   843.0   877.0   845.0   947.0   968.0   927.0   928.0   \n",
+       "3          835.0   843.0   877.0   845.0   947.0   968.0   927.0   928.0   \n",
+       "4          835.0   848.0  1115.0   993.0   889.0  1001.0  1238.0  1063.0   \n",
+       "5          835.0   877.0   962.0  1071.0  1244.0  1177.0  1413.0   987.0   \n",
        "\n",
-       "n_robots      10      11      12     13     14  \n",
-       "method                                          \n",
-       "1         1533.0  1689.0  1728.0    NaN    NaN  \n",
-       "2          829.0   829.0   950.0  950.0  950.0  "
+       "n_robots      10      11      12      13      14  \n",
+       "method                                            \n",
+       "1         2601.0  1584.0  1682.0  1718.0     NaN  \n",
+       "2          991.0  1288.0  1684.0  1108.0  1280.0  \n",
+       "3          991.0  1288.0  1684.0  1108.0  1280.0  \n",
+       "4         1175.0  1229.0  1442.0  1362.0  1351.0  \n",
+       "5          970.0  1119.0  1346.0  1161.0  1286.0  "
       ]
      },
      "metadata": {},
@@ -267,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 209,
    "id": "4a39473a",
    "metadata": {},
    "outputs": [],
