--- a/results/results_2D_point.ipynb
+++ b/results/results_2D_point.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 10,
    "id": "4a77d2a6",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 11,
    "id": "446ab868",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 12,
    "id": "f90189b8",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 13,
    "id": "3bd6065a",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 14,
    "id": "c334a45c",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 15,
    "id": "46f3b861",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 16,
    "id": "f6b4d3bd",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 17,
    "id": "5a65613b",
    "metadata": {},
    "outputs": [
@@ -255,34 +255,34 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>835.0</td>\n",
-       "      <td>848.0</td>\n",
-       "      <td>1115.0</td>\n",
-       "      <td>993.0</td>\n",
-       "      <td>889.0</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>1238.0</td>\n",
-       "      <td>1063.0</td>\n",
-       "      <td>1175.0</td>\n",
-       "      <td>1229.0</td>\n",
-       "      <td>1442.0</td>\n",
-       "      <td>1362.0</td>\n",
-       "      <td>1351.0</td>\n",
+       "      <td>946.0</td>\n",
+       "      <td>907.0</td>\n",
+       "      <td>979.0</td>\n",
+       "      <td>1114.0</td>\n",
+       "      <td>1193.0</td>\n",
+       "      <td>1219.0</td>\n",
+       "      <td>1496.0</td>\n",
+       "      <td>1186.0</td>\n",
+       "      <td>1693.0</td>\n",
+       "      <td>2248.0</td>\n",
+       "      <td>1359.0</td>\n",
+       "      <td>1372.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>835.0</td>\n",
-       "      <td>877.0</td>\n",
-       "      <td>962.0</td>\n",
-       "      <td>1071.0</td>\n",
-       "      <td>1244.0</td>\n",
-       "      <td>1177.0</td>\n",
-       "      <td>1413.0</td>\n",
-       "      <td>987.0</td>\n",
-       "      <td>970.0</td>\n",
-       "      <td>1119.0</td>\n",
-       "      <td>1346.0</td>\n",
-       "      <td>1161.0</td>\n",
-       "      <td>1286.0</td>\n",
+       "      <td>946.0</td>\n",
+       "      <td>939.0</td>\n",
+       "      <td>1050.0</td>\n",
+       "      <td>1243.0</td>\n",
+       "      <td>1373.0</td>\n",
+       "      <td>1989.0</td>\n",
+       "      <td>1305.0</td>\n",
+       "      <td>1693.0</td>\n",
+       "      <td>1378.0</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>1742.0</td>\n",
+       "      <td>1179.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -294,16 +294,16 @@
        "1         1433.0  1435.0  1441.0  1468.0  1446.0  1487.0  1624.0  1512.0   \n",
        "2          835.0   843.0   877.0   845.0   947.0   968.0   927.0   928.0   \n",
        "3          835.0   843.0   877.0   845.0   947.0   968.0   927.0   928.0   \n",
-       "4          835.0   848.0  1115.0   993.0   889.0  1001.0  1238.0  1063.0   \n",
-       "5          835.0   877.0   962.0  1071.0  1244.0  1177.0  1413.0   987.0   \n",
+       "4          835.0   946.0   907.0   979.0  1114.0  1193.0  1219.0  1496.0   \n",
+       "5          835.0   946.0   939.0  1050.0  1243.0  1373.0  1989.0  1305.0   \n",
        "\n",
        "n_robots      10      11      12      13      14  \n",
        "method                                            \n",
        "1         2601.0  1584.0  1682.0  1718.0     NaN  \n",
        "2          991.0  1288.0  1684.0  1108.0  1280.0  \n",
        "3          991.0  1288.0  1684.0  1108.0  1280.0  \n",
-       "4         1175.0  1229.0  1442.0  1362.0  1351.0  \n",
-       "5          970.0  1119.0  1346.0  1161.0  1286.0  "
+       "4         1186.0  1693.0  2248.0  1359.0  1372.0  \n",
+       "5         1693.0  1378.0  1974.0  1742.0  1179.0  "
       ]
      },
      "metadata": {},
@@ -320,8 +320,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d5d91184",
+   "metadata": {},
+   "source": [
+    "n_robots\t2\t3\t4\t5\t6\t7\t8\t9\t10\t11\t12\t13\t14\n",
+    "5\t835.0\t946.0\t904.0\t1037.0\t1262.0\t1116.0\t1091.0\t1313.0\t1423.0\t2183.0\t1775.0\t1828.0\t1252.0"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 18,
    "id": "4a39473a",
    "metadata": {},
    "outputs": [],
